--- a/input.conf
+++ b/input.conf
@@ -13,40 +13,6 @@ MOUSE_BTN6     ignore
 
 
 
-# Arrow/navigation keys
-
-RIGHT       osd-msg-bar seek +5  relative+keyframes
-LEFT        osd-msg-bar seek -5  relative+keyframes
-SHIFT+RIGHT osd-msg-bar seek +1  relative+exact
-SHIFT+LEFT  osd-msg-bar seek -1  relative+exact
-
-UP         osd-msg-bar seek +30  relative+keyframes
-DOWN       osd-msg-bar seek -30  relative+keyframes
-SHIFT+UP   osd-msg-bar seek +120 relative+keyframes
-SHIFT+DOWN osd-msg-bar seek -120 relative+keyframes
-
-PGUP       osd-msg-bar seek +600 relative+keyframes
-PGDWN      osd-msg-bar seek -600 relative+keyframes
-
-CTRL+RIGHT sub-seek +1 ; show-text "Sub Seek +1"
-CTRL+LEFT  sub-seek -1 ; show-text "Sub Seek -1"
-
-# Adjust timing so that next/prev subtitle is displayed now
-CTRL+UP    sub-step +1 ; show-text "Sub Step +1 (timing adjustment)"
-CTRL+DOWN  sub-step -1 ; show-text "Sub Step -1 (timing adjustment)"
-
-ALT+RIGHT  add video-pan-x -0.01
-ALT+LEFT   add video-pan-x +0.01
-ALT+UP     add video-pan-y +0.01
-ALT+DOWN   add video-pan-y -0.01
-
-META+RIGHT add video-zoom  +0.05
-META+LEFT  add video-zoom  -0.05
-META+UP    add video-zoom  +0.05
-META+DOWN  add video-zoom  -0.05
-
-
-
 # Trackpad
 
 AXIS_UP    ignore
@@ -56,8 +22,40 @@ AXIS_RIGHT ignore
 
 
 
-# ` [1] [2] [3] [4] [5] [6] [7] [8] [9] [0]
-# ~ [!] [@]  #   $   %   ^   &   *   (   )
+# Arrow/navigation keys
+
+RIGHT       osd-msg-bar seek +5  relative+keyframes
+LEFT        osd-msg-bar seek -5  relative+keyframes
+SHIFT+RIGHT osd-msg-bar seek +1  relative+exact
+SHIFT+LEFT  osd-msg-bar seek -1  relative+exact
+CTRL+RIGHT  frame-step ; show-text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
+CTRL+LEFT   frame-back-step ; show-text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
+
+UP         osd-msg-bar seek +30  relative+keyframes
+DOWN       osd-msg-bar seek -30  relative+keyframes
+SHIFT+UP   osd-msg-bar seek +120 relative+keyframes
+SHIFT+DOWN osd-msg-bar seek -120 relative+keyframes
+
+PGUP       osd-msg-bar seek +600 relative+keyframes
+PGDWN      osd-msg-bar seek -600 relative+keyframes
+
+ALT+RIGHT  sub-seek +1 ; show-text "Sub Seek +1"
+ALT+LEFT   sub-seek -1 ; show-text "Sub Seek -1"
+
+#ALT+RIGHT  add video-pan-x -0.01
+#ALT+LEFT   add video-pan-x +0.01
+#ALT+UP     add video-pan-y +0.01
+#ALT+DOWN   add video-pan-y -0.01
+
+#META+RIGHT add video-zoom  +0.05
+#META+LEFT  add video-zoom  -0.05
+#META+UP    add video-zoom  +0.05
+#META+DOWN  add video-zoom  -0.05
+
+
+
+# ` [1] [2] [3] [4] [5] [6] [7] [8] [9] [0] - =
+# ~ [!]  @   #   $   %   ^   &   *   (   )  _ +
 
 1      add contrast -1 ; show-text "Contrast: ${contrast}"
 2      add contrast +1 ; show-text "Contrast: ${contrast}"
@@ -72,14 +70,6 @@ AXIS_RIGHT ignore
 0      add volume +2 ; show-text "Volume: ${volume}"
 
 !      cycle ontop
-@      cycle-values vf "format=colorlevels=full" "format=colorlevels=auto" "format=colorlevels=limited"
-
-#      ignore
-$      ignore
-%      ignore
-^      ignore
-&      ignore
-*      ignore
 
 CTRL+1 show-text "Shaders: ${glsl-shaders}"
 CTRL+2 change-list glsl-shaders append "~/.mpv/shaders/ravu-r3-rgb.hook"
@@ -89,31 +79,42 @@ CTRL+5 change-list glsl-shaders append "~/.mpv/shaders/FineSharp.glsl"
 CTRL+6 change-list glsl-shaders append "~/.mpv/shaders/adaptive-sharpen.glsl"
 CTRL+0 set glsl-shaders ""
 
+`      ignore
+~      ignore
+#      ignore
+$      ignore
+%      ignore
+^      ignore
+&      ignore
+*      ignore
+§      ignore
+±      ignore
 
 
-# [q] [w] [e] [r] [t] y u [i] [o] [p] [ ]
-# [Q] [W] [E] [R] [T] Y U [I]  O  [P] { }
+
+# [q] [w] [e] [r] [t] [y] [u] [i] [o] [p] [ ]
+# [Q] [W]  E   R  [T] [Y] [U] [I]  O  [P] { }
 
 Q      quit
-q      quit-watch-later
+q      script-binding auto_save_state/quit-watch-later-conditional
 
 w      script-message osc-playlist
 W      playlist-shuffle
-e      playlist-next ; show-text "${playlist-pos-1}/${playlist-count}"
-E      playlist-prev ; show-text "${playlist-pos-1}/${playlist-count}"
+e      playlist-prev ; show-text "${playlist-pos-1}/${playlist-count}"
+E      ignore
 
-r      cycle-values sub-use-margins "yes" "no"
-R      cycle-values ass-force-margins "yes" "no"  # does not work with :blend-subtitles
-CTRL+r cycle-values blend-subtitles "yes" "video" "no"
+r      playlist-next ; show-text "${playlist-pos-1}/${playlist-count}"
+R      ignore
 
-t      cycle-values stretch-image-subs-to-screen "yes" "no"
-T      cycle-values stretch-dvd-subs "yes" "no"
+t      cycle-values sub-use-margins "yes" "no"
+T      cycle-values ass-force-margins "yes" "no"  # does not work with :blend-subtitles
+CTRL+t cycle-values blend-subtitles "yes" "video" "no"
 
-y      ignore
-Y      ignore
+y      cycle-values stretch-image-subs-to-screen "yes" "no"
+Y      cycle-values stretch-dvd-subs "yes" "no"
 
 u      cycle-values hwdec "auto" "no"
-U      ignore
+U      cycle-values vf "format=colorlevels=full" "format=colorlevels=auto" "format=colorlevels=limited"
 
 i      script-binding stats/display-stats
 I      script-binding stats/display-stats-toggle
@@ -134,14 +135,13 @@ P      cycle-values video-aspect "16:9" "4:3" "2.35:1" "16:10"
 
 a      cycle audio                                                     # switch audio streams
 A      cycle-values af "lavfi=[dynaudnorm=f=200:g=5:r=0.1]" ""         # dynamic range compression
-CTRL+a script-binding auto_audio_device/toggle-auto-audio-device       # toggle automatic audio device switching
-ALT+a  script-binding auto_audio_device/set-auto-audio-device
+CTRL+a script-binding auto_audio_device/toggle-switching               # toggle automatic audio device switching
 
 s      cycle sub                                                       # cycle through subtitles
 S      cycle sub-visibility
 CTRL+s cycle secondary-sid
 
-d      cycle-values window-scale "1.5" "2.0" "0.5" "1.0" ; show-text "Scale: ${window-scale}"
+d      cycle-values window-scale "1.5" "2.0" "3.0" "0.5" "1.0" ; show-text "Scale: ${window-scale}"
 D      cycle edition
 CTRL+d cycle video
 
@@ -185,29 +185,28 @@ b      add speed +0.05
 B      add speed -0.05
 CTRL+b set speed 1.0
 
-n      add sub-delay +0.10
-N      add sub-delay -0.10
+n      add audio-delay +0.10
+N      add audio-delay -0.10
 CTRL+n set sub-delay 0
 
-m      add audio-delay +0.10
-M      add audio-delay -0.10
+m      add sub-delay +0.10
+M      add sub-delay -0.10
 CTRL+m set sub-delay 0
 
->      script-binding betterchapters/chapterplaylist-next #; show-text "${?chapter:Chapter: ${chapter}}"
-<      script-binding betterchapters/chapterplaylist-prev #; show-text "${?chapter:Chapter: ${chapter}}"
+,      add sub-scale -0.05                  # decrease subtitle font size
+<      add sub-scale +0.05                  # increase subtitle font size
+.      add sub-pos -1                       # move subtitles up
+>      add sub-pos +1                       # move subtitles down
 
-.      frame-step ; show-text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
-,      frame-back-step ; show-text "Frame: ${estimated-frame-number} / ${estimated-frame-count}"
+# Adjust timing so that next/prev subtitle is displayed now
+/      sub-step +1 ; show-text "Sub Step +1 (timing adjustment)"
+?      sub-step -1 ; show-text "Sub Step -1 (timing adjustment)"
 
 
 
-# [-] [=] [esc] [space] [BackSpace]
-# [_] [+] [tab] [enter]
+#  [esc] [space] [backspace]
+#  [tab] [enter]
 
--      add sub-scale -0.05                  # decrease subtitle font size
-_      add sub-scale +0.05                  # increase subtitle font size
-=      add sub-pos -1                       # move subtitles up
-+      add sub-pos +1                       # move subtitles down
 
 ESC               cycle fullscreen
 SPACE             cycle pause
@@ -248,34 +247,34 @@ KP_ENTER ignore
 # Apple Remote
 
 AR_PLAY        cycle pause
-AR_PLAY_HOLD   quit
+AR_PLAY_HOLD   script-binding auto_save_state/quit-watch-later-conditional
 AR_CENTER      cycle pause
-AR_CENTER_HOLD quit
-AR_NEXT        osd-msg-bar seek 10
-AR_NEXT_HOLD   osd-msg-bar seek 120
-AR_PREV        osd-msg-bar seek -10
+AR_CENTER_HOLD script-binding auto_save_state/quit-watch-later-conditional
+AR_NEXT        osd-msg-bar seek +5
+AR_NEXT_HOLD   osd-msg-bar seek +120
+AR_PREV        osd-msg-bar seek -5
 AR_PREV_HOLD   osd-msg-bar seek -120
 AR_MENU        show-progress
 AR_MENU_HOLD   cycle mute
-AR_VUP         add volume +1
-AR_VUP_HOLD    add chapter +1 ; show-text "${?chapter:Chapter: ${chapter}}"
-AR_VDOWN       add volume -1
-AR_VDOWN_HOLD  add chapter -1 ; show-text "${?chapter:Chapter: ${chapter}}"
+AR_VUP         add volume +2
+AR_VUP_HOLD    script-binding betterchapters/chapterplaylist-next #; show-text "${?chapter:Chapter: ${chapter}}"
+AR_VDOWN       add volume -2
+AR_VDOWN_HOLD  script-binding betterchapters/chapterplaylist-prev #; show-text "${?chapter:Chapter: ${chapter}}"
 
 
 
 # Media Keys
 
-POWER       quit
+POWER       script-binding auto_save_state/quit-watch-later-conditional
 MENU        show-progress
 PLAY        cycle pause
 PAUSE       cycle pause
 PLAYPAUSE   cycle pause
-STOP        quit
+STOP        script-binding auto_save_state/quit-watch-later-conditional
 FORWARD     osd-msg-bar seek +5  relative keyframes
 REWIND      osd-msg-bar seek -5  relative keyframes
-NEXT        osd-msg playlist-next ; show-text "${playlist-pos-1}/${playlist-count}"
-PREV        osd-msg playlist-prev ; show-text "${playlist-pos-1}/${playlist-count}"
+NEXT        script-binding betterchapters/chapterplaylist-next #; show-text "${?chapter:Chapter: ${chapter}}"
+PREV        script-binding betterchapters/chapterplaylist-prev #; show-text "${?chapter:Chapter: ${chapter}}"
 VOLUME_UP   add volume +2 ; show-text "Volume: ${volume}"
 VOLUME_DOWN add volume -2 ; show-text "Volume: ${volume}"
 MUTE        cycle mute
