--- a/mpv.conf
+++ b/mpv.conf
@@ -30,17 +30,17 @@ screenshot-template='~/Desktop/%F (%P) %n'
 hls-bitrate=max                         # use max quality for HLS streams
 
 [ytdl-desktop]
-profile-desc=cond:is_desktop()
+profile-desc=cond:dedicated_gpu()
 ytdl-format=bestvideo[height<=?2160]+bestaudio/best
 
 [ytdl-laptop]
-profile-desc=cond:is_laptop()
+profile-desc=cond:not dedicated_gpu()
 ytdl-format=bestvideo[height<=?1080][fps<=?30][vcodec!=?vp9][protocol!=http_dash_segments]+bestaudio/best
 
 [default]
 
 
-#########c
+#########
 # Cache #
 #########
 
@@ -123,13 +123,13 @@ volume=100                              # default volume, 100 = unchanged
 # Video Output #
 ################
 
-# Active VOs (and some other options) are set conditionally
-# See here for more information: https://github.com/wm4/mpv-scripts/blob/master/auto-profiles.lua
-# on_battery(), is_laptop() and is_dektop() are my own additional functions imported from scripts/auto-profiles-functions.lua
+# Active VO options are set conditionally and require my slightly modified 
+# `scripts/auto-profiles.lua` as well as `scripts/auto-profiles-functions.lua`. 
+# More information about auto-profiles in general: https://github.com/wiiaboo/mpv-scripts/blob/master/auto-profiles.lua
+# on_battery() and dedicated_gpu() are my own functions in `scripts/auto-profiles-functions.lua`
+# and might need to be adjusted for your system/setup.
 
 # Defaults for all profiles
-#vo=gpu
-#gpu-api=opengl
 tscale=oversample                      # [sharp] oversample <-> linear (triangle) <-> catmull_rom <-> mitchell <-> gaussian <-> bicubic [smooth]
 opengl-early-flush=no
 opengl-pbo=no                          # "yes" is currently bugged: https://github.com/mpv-player/mpv/issues/4988
@@ -190,7 +190,6 @@ vd-lavc-threads=32
 [4K-lavc-threads-inverted]
 profile-desc=cond:get('width', math.huge) < 3840
 vd-lavc-threads=0
-
 
 
 ###################################
