--- a/script-opts/blacklist_extensions.conf
+++ b/script-opts/blacklist_extensions.conf
@@ -4,7 +4,7 @@
 #whitelist=mkv,webm,png,jpg,mp4,avi,jpeg,flv,m4v
 
 # alternatively, blacklist formats commonly found near videos
-blacklist=srt,ass,mks,txt,conf
+blacklist=srt,ass,mks,txt,conf,mka
 
 remove_files_without_extension=yes
 
