input.conf: toggle shaders rather than appending
At least for those where having them multiple times makes little sense.

--- a/input.conf
+++ b/input.conf
@@ -73,10 +73,10 @@ ALT+LEFT   sub-seek -1 ; show-text "Sub Seek -1"
 
 CTRL+1 show-text "Shaders: ${glsl-shaders}"
 CTRL+2 change-list glsl-shaders append "~/.mpv/shaders/ravu-r3-rgb.hook"
-CTRL+3 change-list glsl-shaders append "~/.mpv/shaders/SSimSuperRes.glsl"
-CTRL+4 change-list glsl-shaders append "~/.mpv/shaders/SSimDownscaler.glsl"
-CTRL+5 change-list glsl-shaders append "~/.mpv/shaders/FineSharp.glsl"
-CTRL+6 change-list glsl-shaders append "~/.mpv/shaders/adaptive-sharpen.glsl"
+CTRL+3 change-list glsl-shaders toggle "~/.mpv/shaders/SSimSuperRes.glsl"
+CTRL+4 change-list glsl-shaders toggle "~/.mpv/shaders/SSimDownscaler.glsl"
+CTRL+5 change-list glsl-shaders toggle "~/.mpv/shaders/FineSharp.glsl"
+CTRL+6 change-list glsl-shaders toggle "~/.mpv/shaders/adaptive-sharpen.glsl"
 CTRL+0 set glsl-shaders ""
 
 `      ignore
