script-opts: adjust to modified mpv scripts

--- a/script-opts/osc.conf
+++ b/script-opts/osc.conf
@@ -1,6 +1,3 @@
-layout=slimbox
-seekbarstyle=slider
-valign=0.9
-deadzonesize=1
-hidetimeout=500
-#minmousemove=999999
+layout=bottombar
+seekbarstyle=diamond
+seekbarhandlesize=1
