config: use interal stats.lua

--- a/mpv.conf
+++ b/mpv.conf
@@ -6,7 +6,7 @@
 ###########
 
 input-ipc-server=/tmp/mpvsocket         # listen for IPC on this socket
-load-stats-overlay=no                   # use local stats.lua
+#load-stats-overlay=no                   # use local stats.lua
 #save-position-on-quit                  # handled by a script
 
 no-border                               # no window title bar
@@ -44,13 +44,9 @@ ytdl-format=bestvideo[height<=?1080][fps<=?30][vcodec!=?vp9][protocol!=http_dash
 # Cache #
 #########
 
-# Configure the cache to be really big (multiple GBs)
-# We have a lot of memory, so why not use it for something
-
 cache=yes
-cache-default=4000000                   # size in KB
-cache-backbuffer=250000                 # size in KB
-demuxer-max-bytes=114748364             # ~100 MiB in bytes
+demuxer-max-bytes=400MiB
+demuxer-max-back-bytes=150MiB
 
 
 #############
@@ -76,6 +72,9 @@ osd-bar-w=60                            # width of " " "
 # Subtitles #
 #############
 
+demuxer-mkv-subtitle-preroll=yes        # try to show embedded subs when seeking even when no index information is present
+demuxer-mkv-subtitle-preroll-secs=2
+
 sub-auto=fuzzy                          # external subs don't have to match the file name exactly to autoload
 sub-file-paths-append=ass               # search for external subs in these relative subdirectories
 sub-file-paths-append=srt
@@ -83,7 +82,6 @@ sub-file-paths-append=sub
 sub-file-paths-append=subs
 sub-file-paths-append=subtitles
 
-demuxer-mkv-subtitle-preroll            # try to correctly show embedded subs when seeking
 embeddedfonts=yes                       # use embedded fonts for SSA/ASS subs
 sub-fix-timing=no                       # do not try to fix gaps (which might make it worse in some cases)
 sub-ass-force-style=Kerning=yes         # allows you to override style parameters of ASS scripts
@@ -151,14 +149,15 @@ dither-depth=auto
 correct-downscaling=yes
 sigmoid-upscaling=yes
 deband=yes
-glsl-shaders-append="~/.mpv/shaders/ravu-r3-rgb.hook"
-glsl-shaders-append="~/.mpv/shaders/ravu-r3-rgb.hook"
-glsl-shaders-append="~/.mpv/shaders/ravu-r3-rgb.hook"
+#glsl-shaders-append="~/.mpv/shaders/KrigBilateral.glsl"
+glsl-shaders-append="~/.mpv/shaders/ravu-lite-r4.hook"
+glsl-shaders-append="~/.mpv/shaders/ravu-lite-r4.hook"
+glsl-shaders-append="~/.mpv/shaders/ravu-lite-r4.hook"
 
 [mid-quality]
 profile-desc=cond:is_mid(get('width', 0), get('height', 0), get('estimated-vf-fps', 0))
 scale=spline36
-cscale=spline36
+cscale=bicubic
 dscale=mitchell
 scale-antiring=1.0
 cscale-antiring=1.0
