input: remove AR keys and change shaders

--- a/input.conf
+++ b/input.conf
@@ -73,10 +73,12 @@ ALT+LEFT   sub-seek -1 ; show-text "Sub Seek -1"
 
 CTRL+1 show-text "Shaders: ${glsl-shaders}"
 CTRL+2 change-list glsl-shaders append "~/.mpv/shaders/ravu-r3-rgb.hook"
-CTRL+3 change-list glsl-shaders toggle "~/.mpv/shaders/SSimSuperRes.glsl"
-CTRL+4 change-list glsl-shaders toggle "~/.mpv/shaders/SSimDownscaler.glsl"
-CTRL+5 change-list glsl-shaders toggle "~/.mpv/shaders/FineSharp.glsl"
-CTRL+6 change-list glsl-shaders toggle "~/.mpv/shaders/adaptive-sharpen.glsl"
+CTRL+3 change-list glsl-shaders append "~/.mpv/shaders/FSRCNNX_x2_8-0-4-1.glsl"
+CTRL+4 change-list glsl-shaders toggle "~/.mpv/shaders/KrigBilateral.glsl"
+CTRL+5 change-list glsl-shaders toggle "~/.mpv/shaders/SSimSuperRes.glsl"
+CTRL+6 change-list glsl-shaders toggle "~/.mpv/shaders/SSimDownscaler.glsl"
+CTRL+7 change-list glsl-shaders toggle "~/.mpv/shaders/FineSharp.glsl"
+CTRL+8 change-list glsl-shaders toggle "~/.mpv/shaders/adaptive-sharpen.glsl"
 CTRL+0 set glsl-shaders ""
 
 `      ignore
@@ -241,25 +243,6 @@ KP8      ignore
 KP9      ignore
 KP_DEC   ignore
 KP_ENTER ignore
-
-
-
-# Apple Remote
-
-AR_PLAY        cycle pause
-AR_PLAY_HOLD   script-binding auto_save_state/quit-watch-later-conditional
-AR_CENTER      cycle pause
-AR_CENTER_HOLD script-binding auto_save_state/quit-watch-later-conditional
-AR_NEXT        osd-msg-bar seek +5
-AR_NEXT_HOLD   osd-msg-bar seek +120
-AR_PREV        osd-msg-bar seek -5
-AR_PREV_HOLD   osd-msg-bar seek -120
-AR_MENU        show-progress
-AR_MENU_HOLD   cycle mute
-AR_VUP         add volume +2
-AR_VUP_HOLD    script-binding betterchapters/chapterplaylist-next #; show-text "${?chapter:Chapter: ${chapter}}"
-AR_VDOWN       add volume -2
-AR_VDOWN_HOLD  script-binding betterchapters/chapterplaylist-prev #; show-text "${?chapter:Chapter: ${chapter}}"
 
 
 
