--- a/input.conf
+++ b/input.conf
@@ -72,14 +72,11 @@ ALT+LEFT   sub-seek -1 ; show-text "Sub Seek -1"
 !      cycle ontop
 
 CTRL+1 show-text "Shaders: ${glsl-shaders}"
-CTRL+2 change-list glsl-shaders append "~/.mpv/shaders/ravu-r3-rgb.hook"
-CTRL+3 change-list glsl-shaders append "~/.mpv/shaders/FSRCNNX_x2_8-0-4-1.glsl"
-CTRL+4 change-list glsl-shaders toggle "~/.mpv/shaders/KrigBilateral.glsl"
-CTRL+5 change-list glsl-shaders toggle "~/.mpv/shaders/SSimSuperRes.glsl"
-CTRL+6 change-list glsl-shaders toggle "~/.mpv/shaders/SSimDownscaler.glsl"
-CTRL+7 change-list glsl-shaders toggle "~/.mpv/shaders/FineSharp.glsl"
-CTRL+8 change-list glsl-shaders toggle "~/.mpv/shaders/adaptive-sharpen.glsl"
-CTRL+0 set glsl-shaders ""
+CTRL+2 change-list glsl-shaders toggle "~/.mpv/shaders/adaptive-sharpen.glsl"
+CTRL+3 change-list glsl-shaders toggle "~/.mpv/shaders/SSimSuperRes.glsl"
+CTRL+4 change-list glsl-shaders toggle "~/.mpv/shaders/SSimDownscaler.glsl"
+CTRL+5 change-list glsl-shaders toggle "~/.mpv/shaders/KrigBilateral.glsl"
+#CTRL+0 set glsl-shaders ""
 
 `      ignore
 ~      ignore
@@ -164,7 +161,7 @@ J      vf toggle "lavfi=[hqdn3d=2.0]"
 k      vf toggle vapoursynth=~~/vs-scripts/decimate.py  # fix 24FPS videos encoded at 30FPS
 K      ignore
 
-l      cycle-values loop-file yes no ; show-text "${?=loop-file==yes:Looping enabled (file)}${?=loop-file==no:Looping disabled (file)}"
+l      cycle-values loop-file yes no ; show-text "${?=loop-file==inf:Looping enabled (file)}${?=loop-file==no:Looping disabled (file)}"
 L      cycle-values loop-playlist yes no ; show-text "${?=loop-playlist==inf:Looping enabled}${?=loop-playlist==no:Looping disabled}"
 CTRL+l ab-loop
 
@@ -225,7 +222,7 @@ META+BS           set video-zoom 0 ; show-text "Zoom resetted"
 
 # [F1] [F2] F3 F4 F5 F6 F7 F8 F9 F10 F11 F12
 
-F1       script-binding repl/repl-enable
+F1       script-binding console/enable
 
 
 
