--- a/mpv.conf
+++ b/mpv.conf
@@ -7,6 +7,7 @@
 
 input-ipc-server=/tmp/mpvsocket         # listen for IPC on this socket
 #load-stats-overlay=no                   # use local stats.lua
+load-auto-profiles=no
 
 no-border                               # no window title bar
 msg-module                              # prepend module name to log messages
@@ -14,7 +15,7 @@ msg-color                               # color log messages on terminal
 term-osd-bar                            # display a progress bar on the terminal
 use-filedir-conf                        # look for additional config files in the directory of the opened file
 pause                                   # no autoplay
-keep-open                               # keep the player open when a file's end is reached
+keep-open=always                        # keep the player open when a file's end is reached
 autofit-larger=100%x95%                 # resize window in case it's larger than W%xH% of the screen
 cursor-autohide-fs-only                 # don't autohide the cursor in window mode, only fullscreen
 input-media-keys=no                     # enable/disable OSX media keys
@@ -25,8 +26,12 @@ force-seekable=yes
 screenshot-format=png
 screenshot-png-compression=8
 screenshot-template='~/Desktop/%F (%P) %n'
+watch-later-directory='~/.mpv/watch_later'
+write-filename-in-watch-later-config
+watch-later-options-remove=fullscreen
 
 hls-bitrate=max                         # use max quality for HLS streams
+script-opts=ytdl_hook-ytdl_path=/usr/local/bin/yt-dlp
 
 [ytdl-desktop]
 profile-desc=cond:dedicated_gpu()
@@ -43,9 +48,9 @@ ytdl-format=bestvideo[height<=?1080][fps<=?30][vcodec!=?vp9][protocol!=http_dash
 # Cache #
 #########
 
-cache=yes
-demuxer-max-bytes=400MiB
-demuxer-max-back-bytes=150MiB
+#cache=yes
+#demuxer-max-bytes=400MiB
+#demuxer-max-back-bytes=150MiB
 
 
 #############
@@ -131,7 +136,6 @@ tscale=oversample                      # [sharp] oversample <-> linear (triangle
 opengl-early-flush=no
 opengl-pbo=no                          # "yes" is currently bugged: https://github.com/mpv-player/mpv/issues/4988
 icc-profile-auto
-icc-contrast=1000                      # silence some warning because the profile is bad
 hwdec=no
 
 [high-quality]
@@ -140,8 +144,8 @@ profile-desc=cond:is_high(get('width', 0), get('height', 0), get('estimated-vf-f
 #scale=ewa_hanning
 #scale-radius=3.2383154841662362
 scale=ewa_lanczossharp
-cscale=ewa_lanczossoft
-dscale=mitchell
+cscale=spline36
+dscale=catmull_rom
 scale-antiring=0
 cscale-antiring=0
 dither-depth=auto
@@ -152,12 +156,15 @@ deband=yes
 glsl-shaders-append="~/.mpv/shaders/ravu-lite-r4.hook"
 glsl-shaders-append="~/.mpv/shaders/ravu-lite-r4.hook"
 glsl-shaders-append="~/.mpv/shaders/ravu-lite-r4.hook"
+#glsl-shaders-append="~/.mpv/shaders/FSRCNNX_x2_8-0-4-1.glsl"
+#glsl-shaders-append="~/.mpv/shaders/FSRCNNX_x2_8-0-4-1.glsl"
+#glsl-shaders-append="~/.mpv/shaders/FSRCNNX_x2_8-0-4-1.glsl"
 
 [mid-quality]
 profile-desc=cond:is_mid(get('width', 0), get('height', 0), get('estimated-vf-fps', 0))
 scale=spline36
 cscale=bicubic
-dscale=mitchell
+dscale=catmull_rom
 scale-antiring=1.0
 cscale-antiring=1.0
 dither-depth=auto
