--- a/input.conf
+++ b/input.conf
@@ -6,17 +6,17 @@
 MOUSE_BTN0     ignore
 MOUSE_BTN0_DBL cycle fullscreen
 MOUSE_BTN2     cycle pause
-MOUSE_BTN3     ignore
-MOUSE_BTN4     ignore
-MOUSE_BTN5     ignore
-MOUSE_BTN6     ignore
+#MOUSE_BTN3     ignore
+#MOUSE_BTN4     ignore
+#MOUSE_BTN5     ignore
+#MOUSE_BTN6     ignore
 
 
 
 # Trackpad
 
-AXIS_UP    ignore
-AXIS_DOWN  ignore
+#AXIS_UP    ignore
+#AXIS_DOWN  ignore
 AXIS_LEFT  ignore
 AXIS_RIGHT ignore
 
@@ -72,10 +72,10 @@ ALT+LEFT   sub-seek -1 ; show-text "Sub Seek -1"
 !      cycle ontop
 
 CTRL+1 show-text "Shaders: ${glsl-shaders}"
-CTRL+2 change-list glsl-shaders toggle "~/.mpv/shaders/adaptive-sharpen.glsl"
-CTRL+3 change-list glsl-shaders toggle "~/.mpv/shaders/SSimSuperRes.glsl"
-CTRL+4 change-list glsl-shaders toggle "~/.mpv/shaders/SSimDownscaler.glsl"
-CTRL+5 change-list glsl-shaders toggle "~/.mpv/shaders/KrigBilateral.glsl"
+CTRL+2 change-list glsl-shaders toggle "~/.mpv/shaders/AdaptiveSharpen/adaptive-sharpen.glsl"
+CTRL+3 change-list glsl-shaders toggle "~/.mpv/shaders/SSimSuperRes/SSimSuperRes.glsl"
+CTRL+4 change-list glsl-shaders toggle "~/.mpv/shaders/SSimDownscaler/SSimDownscaler.glsl"
+CTRL+5 change-list glsl-shaders toggle "~/.mpv/shaders/KrigBilateral/KrigBilateral.glsl"
 #CTRL+0 set glsl-shaders ""
 
 `      ignore
@@ -133,7 +133,8 @@ P      cycle-values video-aspect "16:9" "4:3" "2.35:1" "16:10"
 # [A] [S] [D] [F] [G] [H] [J] [K] [L]
 
 a      cycle audio                                                     # switch audio streams
-A      cycle-values af "lavfi=[dynaudnorm=f=200:g=5:r=0.1]" ""         # dynamic range compression
+#A      cycle-values af "lavfi=[dynaudnorm=f=200:g=5:r=0.1]" ""
+A      cycle-values af "lavfi=[dynaudnorm=compress=25.0:gausssize=53]" ""
 CTRL+a script-binding auto_audio_device/toggle-switching               # toggle automatic audio device switching
 
 s      cycle sub                                                       # cycle through subtitles
