--- a/mpv.conf
+++ b/mpv.conf
@@ -6,8 +6,7 @@
 ###########
 
 input-ipc-server=/tmp/mpvsocket         # listen for IPC on this socket
-#load-stats-overlay=no                   # use local stats.lua
-load-auto-profiles=no
+load-auto-profiles=no                   # use local copy with modifications
 
 no-border                               # no window title bar
 msg-module                              # prepend module name to log messages
@@ -18,10 +17,10 @@ pause                                   # no autoplay
 keep-open=always                        # keep the player open when a file's end is reached
 autofit-larger=100%x95%                 # resize window in case it's larger than W%xH% of the screen
 cursor-autohide-fs-only                 # don't autohide the cursor in window mode, only fullscreen
-input-media-keys=no                     # enable/disable OSX media keys
 cursor-autohide=1000                    # autohide the curser after 1s
 prefetch-playlist=yes
 force-seekable=yes
+hls-bitrate=max                         # use max quality for HLS streams
 
 screenshot-format=png
 screenshot-png-compression=8
@@ -30,16 +29,13 @@ watch-later-directory='~/.mpv/watch_later'
 write-filename-in-watch-later-config
 watch-later-options-remove=fullscreen
 
-hls-bitrate=max                         # use max quality for HLS streams
-script-opts=ytdl_hook-ytdl_path=/usr/local/bin/yt-dlp
-
 [ytdl-desktop]
-profile-desc=cond:dedicated_gpu()
+profile-cond=on_battery()
 ytdl-format=bestvideo[height<=?2160]+bestaudio/best
 
 [ytdl-laptop]
-profile-desc=cond:not dedicated_gpu()
-ytdl-format=bestvideo[height<=?1080][fps<=?30][vcodec!=?vp9][protocol!=http_dash_segments]+bestaudio/best
+profile-cond=not on_battery()
+ytdl-format=bestvideo[height<=?2160][fps<=?30]+bestaudio/best
 
 [default]
 
@@ -61,7 +57,7 @@ osd-level=1                             # enable osd and display --osd-status-ms
 osd-duration=2500                       # hide the osd after x ms
 osd-status-msg='${time-pos} / ${duration}${?percent-pos:　(${percent-pos}%)}${?frame-drop-count:${!frame-drop-count==0:　Dropped: ${frame-drop-count}}}\n${?chapter:Chapter: ${chapter}}'
 
-osd-font='Source Sans Pro'
+osd-font='Source Sans 3'
 osd-font-size=32
 osd-color='#CCFFFFFF'                   # ARGB format
 osd-border-color='#DD322640'            # ARGB format
@@ -78,6 +74,7 @@ osd-bar-w=60                            # width of " " "
 
 demuxer-mkv-subtitle-preroll=yes        # try to show embedded subs when seeking even when no index information is present
 demuxer-mkv-subtitle-preroll-secs=2
+sub-filter-sdh=yes
 
 sub-auto=fuzzy                          # external subs don't have to match the file name exactly to autoload
 sub-file-paths-append=ass               # search for external subs in these relative subdirectories
@@ -88,18 +85,18 @@ sub-file-paths-append=subtitles
 
 embeddedfonts=yes                       # use embedded fonts for SSA/ASS subs
 sub-fix-timing=no                       # do not try to fix gaps (which might make it worse in some cases)
-sub-ass-force-style=Kerning=yes         # allows you to override style parameters of ASS scripts
+sub-ass-style-overrides=Kerning=yes     # allows you to override style parameters of ASS scripts
 sub-use-margins
 sub-ass-force-margins
 
 # the following options only apply to subtitles without own styling (i.e. not ASS but e.g. SRT)
-sub-font="Source Sans Pro Semibold"
+sub-font='Source Sans 3'
 sub-font-size=36
-sub-color="#FFFFFFFF"
-sub-border-color="#FF262626"
+sub-color='#FFFFFFFF'
+sub-border-color='#FF262626'
 sub-border-size=3.2
 sub-shadow-offset=1
-sub-shadow-color="#33000000"
+sub-shadow-color='#33000000'
 sub-spacing=0.5
 
 
@@ -120,6 +117,21 @@ audio-pitch-correction=yes              # automatically insert scaletempo when p
 volume-max=200                          # maximum volume in %, everything above 100 results in amplification
 volume=100                              # default volume, 100 = unchanged
 
+# run `mpv --audio-device=help` to get the name of a potential multi-channel HDMI audio device (if any)
+# and use it in the conditions below
+#[hdmi-audio]
+#profile-cond=get('audio-device') == 'coreaudio/4DD90482-0000-0000-011C-0103806C3D78'
+#audio-spdif=ac3,eac3,dts-hd,truehd
+#audio-channels=7.1(wide-side),5.1(side),3.1,2.1,stereo
+##ad-lavc-downmix=no
+
+#[hdmi-audio-inverted]
+#profile-cond=get('audio-device') ~= 'coreaudio/4DD90482-0000-0000-011C-0103806C3D78'
+#audio-spdif=
+#audio-channels=auto-safe
+##ad-lavc-downmix=no
+
+[default]
 
 ################
 # Video Output #
@@ -133,66 +145,48 @@ volume=100                              # default volume, 100 = unchanged
 
 # Defaults for all profiles
 tscale=oversample                      # [sharp] oversample <-> linear (triangle) <-> catmull_rom <-> mitchell <-> gaussian <-> bicubic [smooth]
-opengl-early-flush=no
-opengl-pbo=no                          # "yes" is currently bugged: https://github.com/mpv-player/mpv/issues/4988
+#opengl-early-flush=no
+#opengl-pbo=no                          # "yes" is currently bugged: https://github.com/mpv-player/mpv/issues/4988
 icc-profile-auto
-hwdec=no
+#hwdec=no
 
 [high-quality]
-profile-desc=cond:is_high(get('width', 0), get('height', 0), get('estimated-vf-fps', 0))
-# hanning with this radius is broken on OSX due to OpenGL driver bug
-#scale=ewa_hanning
-#scale-radius=3.2383154841662362
+profile-cond=is_high(get('width', 0), get('height', 0), get('estimated-vf-fps', 0))
 scale=ewa_lanczossharp
 cscale=spline36
 dscale=catmull_rom
 scale-antiring=0
 cscale-antiring=0
 dither-depth=auto
-correct-downscaling=yes
 sigmoid-upscaling=yes
 deband=yes
-#glsl-shaders-append="~/.mpv/shaders/KrigBilateral.glsl"
-glsl-shaders-append="~/.mpv/shaders/ravu-lite-r4.hook"
-glsl-shaders-append="~/.mpv/shaders/ravu-lite-r4.hook"
-glsl-shaders-append="~/.mpv/shaders/ravu-lite-r4.hook"
-#glsl-shaders-append="~/.mpv/shaders/FSRCNNX_x2_8-0-4-1.glsl"
-#glsl-shaders-append="~/.mpv/shaders/FSRCNNX_x2_8-0-4-1.glsl"
-#glsl-shaders-append="~/.mpv/shaders/FSRCNNX_x2_8-0-4-1.glsl"
+glsl-shaders-append='~/.mpv/shaders/mpv-prescalers/gather/ravu-lite-ar-r4.hook'
+glsl-shaders-append='~/.mpv/shaders/mpv-prescalers/gather/ravu-lite-ar-r4.hook'
+glsl-shaders-append='~/.mpv/shaders/mpv-prescalers/gather/ravu-lite-ar-r4.hook'
 
 [mid-quality]
-profile-desc=cond:is_mid(get('width', 0), get('height', 0), get('estimated-vf-fps', 0))
+profile-cond=is_mid(get('width', 0), get('height', 0), get('estimated-vf-fps', 0))
 scale=spline36
 cscale=bicubic
 dscale=catmull_rom
 scale-antiring=1.0
 cscale-antiring=1.0
 dither-depth=auto
-correct-downscaling=yes
 sigmoid-upscaling=yes
 deband=yes
 glsl-shaders-set=""
 
 [low-quality]
-profile-desc=cond:is_low(get('width', 0), get('height', 0), get('estimated-vf-fps', 0))
-scale=bilinear
-cscale=bilinear
-dscale=bilinear
+profile-cond=is_low(get('width', 0), get('height', 0), get('estimated-vf-fps', 0))
+scale=bicubic
+cscale=bicubic
+dscale=bicubic
 scale-antiring=0
 cscale-antiring=0
 dither-depth=no
-correct-downscaling=no
 sigmoid-upscaling=no
 deband=no
 glsl-shaders-set=""
-
-[4K-lavc-threads]
-profile-desc=cond:get('width', -math.huge) >= 3840
-vd-lavc-threads=32
-
-[4K-lavc-threads-inverted]
-profile-desc=cond:get('width', math.huge) < 3840
-vd-lavc-threads=0
 
 
 ###################################
@@ -201,8 +195,6 @@ vd-lavc-threads=0
 
 [protocol.https]
 cache=yes
-user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:57.0) Gecko/20100101 Firefox/58.0'
 
 [protocol.http]
 cache=yes
-user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:57.0) Gecko/20100101 Firefox/58.0'
